Fixed linechart not showing on mobile, need ISO 8601 date format

--- a/src/components/sidebar/SideBar.module.css
+++ b/src/components/sidebar/SideBar.module.css
@@ -2,7 +2,7 @@
 .container{
     position: relative;
     min-width: 70px;
-    background-color: #9e8;
+    background-color: #cb8;
     
 }
 .sidebar{
